# Manual-ZEN

./: .readthedocs.yaml  mkdocs.yml  pyproject.toml
docs/: Colocar Tag em Notas no Sieg.md  Enviar Documentos.md  Escritorio Virtual.md  Sieg.md  Visualizando Documentos Enviados.md  Visualizando Documentos Recebidos.md  index.md
